Fixed Spacing Issues

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -311,12 +311,12 @@ i.no-stroke {
   width: 250px;
 }
 .two {
-  width: 350px;
+  width: 375px;
   padding-left: 40px;
 
 }
 .three {
-  width: 300px;
+  width: 270px;
   padding-left: 40px;
 }
 .headshot {
